Get the new version of ScopedPreferenceStore
Copy the class from org.eclipse.ui.preferences.

Change-Id: I5ef631c5f4cc8d9447b8398a22cf92fc45626ba4
Signed-off-by: Olivier Prouvost <olivier.prouvost@opcoach.com>